# ckb-crypto-demo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  build.sh  make_via_riscv.sh  make_via_riscv_mini.sh  target.sh  test.sh
.github/workflows/: project-bot.yaml
examples/: main.cpp
include/: bignum.cpp  bignum.h  ecc.h  sha256.h
sig_cli/: readme.md
sig_cli/cli/: CMakeLists.txt  cli.cpp
src/: CMakeLists.txt  bls_verify.cpp  blskeygen.cpp  blssig.cpp  blsverify.c  blsverify.cpp  loop.c  pairing_c.cpp
src/ed25519/: CMakeLists.txt  verify.cpp
src/hash/: nist5.c  sha256.cpp
src/hash_test/: main.c  nist5.c  x11hash.c
src/include/: common.h
src/sign/: RSA.cpp  ecc.cpp  ecdsa_test.cpp
src/sm2/: sm2.cpp  verify.cpp
src/sm3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  sm3
test/: CMakeLists.txt  sha256_test.cpp  sha256_test.h  sha256_test.py  sha256_testcase
tx-verify/: Gemfile  README.md  a.yaml  debug-new.json  log  make_via_riscv.sh  tx-mock.rb
tx_complete/: debug-new.json
verify_onchain/: make_ed25519.sh  make_r1.sh  make_rsa.sh  make_sm2.sh  readme.md
verify_onchain/botan_riscv/src/lib/asn1/: oid_maps.cpp  oids.cpp
verify_onchain/botan_riscv/src/lib/pubkey/ec_group/: ec_group.cpp  point_gfp.h  point_mul.cpp  point_mul_r1.cpp
verify_onchain/botan_riscv/src/lib/pubkey/ed25519/: ed25519.h
verify_onchain/botan_riscv/src/lib/rng/: rng.h
verify_onchain/botan_riscv/src/lib/utils/: mutex.h  os_utils.cpp
verify_onchain/botan_riscv/src/lib/utils/cpuid/: cpuid.h
verify_onchain/ed25519/: CMakeLists.txt  ed25519  ed25519.cpp
verify_onchain/include/: blake2b.h  common.h  get_arg.h  molecule_builder.h  molecule_reader.h
verify_onchain/r1/: CMakeLists.txt  r1  r1.cpp
verify_onchain/rsa/: CMakeLists.txt  rsa  rsa.cpp
verify_onchain/sm2/: CMakeLists.txt  sm2  sm2.cpp
verify_onchain/tx-verify/: README.md  debug-new.json  tx-mock.rb  tx-mocked.json
